[tool.poetry]
name = "hyper-search-engine"
version = "0.1.0"
description = ""
authors = ["wisskirchenj <wisskirchen.juergen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-custom-exit-code = "^0.3.0"
flake8 = "^7.1.0"
spacy = "^3.7.5"
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
