[tool.poetry]
name = "hyper-search-engine"
version = "0.1.0"
description = ""
authors = ["wisskirchenj <wisskirchen.juergen@gmail.com>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-custom-exit-code = "^0.3.0"
flake8 = "^7.1.0"
spacy = "^3.7.5"
scikit-learn = "^1.5.1"
nltk = "^3.8.1"
numpy = "~1.26.4"  # https://github.com/numpy/numpy/issues/26710
parameterized = "^0.9.0"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
